Fix side menu word wrap

--- a/css/defalt.css
+++ b/css/defalt.css
@@ -326,11 +326,13 @@ a.figure.name {
 
 .sub.sidenavigation.opened ul li {
   margin:0;
+  margin-right: 10px;
   padding: 0;
   word-wrap: break-word;
 }
 .sub.sidenavigation.opened ul li a{
   margin:0;
+  margin-right: 20px;
   padding-top: 15px;
   padding-left: 20px;
   padding-right: 0;
